# basket

src/: CMakeLists.txt  bnpview.cpp  bnpview.h
src/context/: CMakeLists.txt  applet.cpp  applet.h  basketview.cpp  basketview.h  basketwidget.cpp  basketwidget.h
src/context/applets/: CMakeLists.txt
src/context/applets/notes/: CMakeLists.txt  basket-applet-notes.desktop  notes.cpp  notes.h
src/context/containments/: CMakeLists.txt
src/context/containments/columns/: CMakeLists.txt  basket-containment-columns.desktop  columnscontainment.cpp  columnscontainment.h  columnslayout.cpp  columnslayout.h
src/context/containments/free/: CMakeLists.txt  basket-containment-free.desktop  desktop.cpp  desktop.h
